Fixed truncated captions in lightbox

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -466,6 +466,7 @@ pre.highlight > button:focus {
 
 .slbCaption {
  font-size: 1em !important;
+ white-space: normal !important;
 }
 
 /* cardify */
